sample/msvc/error/c2034.cpp
// C2034.cpp
struct A {
   char test : 9;   // C2034, char has 8 bits
};
